# Poose3

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Dockerfile  Doxyfile  Makefile  README.md  cmake_install.cmake  demo1  demo2  flake.nix  pyproject.toml  unittests
client/: history_window.py  login.ui  login_window.py  marketplace.ui  marketplace_window.py
demo/: demo1.cpp  demo2.cpp
include/: Product.hpp  Server.hpp  User.hpp
server/: main.py  pybind.cpp
server/views/: auth.py  general.py  my.py  websocket.py
src/: Product.cpp  Server.cpp  User.cpp
tests/: unittests.cpp
wiki/: UML.drawio
wiki/html/: Product_8hpp_source.html  Server_8hpp_source.html  User_8hpp_source.html  annotated.html  classProduct-members.html  classProduct.html  classServer-members.html  classServer.html  classUser-members.html  classUser.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  menudata.js
wiki/html/search/: all_0.js  all_4.js  all_6.js  all_7.js  all_8.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
wiki/latex/: Product_8hpp_source.tex  Server_8hpp_source.tex  User_8hpp_source.tex  annotated.tex  classProduct.tex  classServer.tex  classUser.tex  files.tex  refman.tex
